Closed Bug 39699 Opened 25 years ago Closed 25 years ago

No submenus if scrollbar

Categories

(Core :: XUL, defect, P2)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: BenB, Assigned: waterson)

References

Details

(Whiteboard: [dogfood-][nsbeta2+])

Attachments

(3 files)

Reproduce: 1. Use a bookmarks file with both a submenu and lots of bookmarks on the top level. 2. Open bookmarks 3. Try to open the submenu Actual result: nothing Expected result: Submenu opens DOGFOOD
eric?
Assignee: pinkerton → evaughan
[dogfood+]
Whiteboard: [dogfood+]
I can not reproduce this in Linux or Windows. Can anyone else?
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → WORKSFORME
Status: RESOLVED → VERIFIED
Yes, this must have been fixed. Submenus open now with my last build, but not when I filed this bug.
Blocks: 40158
Bug appears again. REOPENing.
Status: VERIFIED → REOPENED
Resolution: WORKSFORME → ---
I can't reproduce this on today's build (Win32 or Linux). I sized the bookmarks window small enough that a scrollbar appeared, and then tried to open the submenu, and it worked fine.
bokmarks *window"? resize? are you speaking aboutu the sidebar? I am speaking about the bookmarks menu in the main menu.
QA Contact: sairuh → jrgm
I have such a bookmarks menu, and using the 60622 verification build, my bookmark folders show up as if they were just bookmarks, I cannot access their content via that menu, nor the one in the 'personal' toolbar. I don't see why this is dogfood though, since I can get to them much quicker in the sidebar anyway.
Priority: P3 → P2
Target Milestone: --- → M16
Oh, sorry, I misinterpreted. I was looking at the "Manage Bookmarks..." window.
trudelle, it is doogfood, because the sidebar is completely unusable, if you use multiple windows.
on mac, my bookmarks menu on the personal toolbar (which scrolls) works just fine. i don't see the problem.
I am using Linux.
Ben- I don't what you mean. I use it with multiple windows.
trudelle, (in descending order of importance) - I often have 10 and more browser windows open, several of them visible at once. Having a sidebar in each of them wastes a *lot* of screen space. - I use browser windows of size ~600x900 (width/height) px. A sidebar would waste at least 100x900 px for each browser window. - In general, I don't like the idea of seeing the bookmarks all the time. I even hide the personal and navigation toolbar in 4.x.
Oh, I thought you meant *completely unusable*. Reassigning to pinkerton, since evaughan is on vacation until 6/12. need ETA
Assignee: evaughan → pinkerton
Status: REOPENED → NEW
need to dupe this first, and then i'll get on it.
Status: NEW → ASSIGNED
Whiteboard: [dogfood+] → [dogfood+] 6/16
trudelle, ic. Excuse my lacking exactness.
i still cannot duplicate this with trudelle's huge bookmarks list. peter, can you try pitching your localstore.rdf and seeing if that fixes it? might be corruption in rdf.
Yes, removing <profiledir>/localstore.rdf seems to fix the problem (only temporarily, as it reappeared after a while the first time, see CLOSing/REOPENing). (I already worked around this problem, so I also had to recreate a problematic file in 4.x and copy it over the Mozilla bookmarks.html.)
so if pitching the localstore fixes the problem, it sounds like rdf corruption (since there's nothing that menus could be doing to your profile to make it stop working after a while). kicking over to waterson, who is probably going to kill me.
Assignee: pinkerton → waterson
Status: ASSIGNED → NEW
Could somebody please clarify the steps to reproduce the problem?
Whiteboard: [dogfood+] 6/16 → [NEEDINFO]
Waterson, I have none. It got corrupted after some time. Dunno, whcih circumstances cause the corruption.
marking WORKSFORME if there is no way to reproduce the problem. re-open if the situation changes.
Status: NEW → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → WORKSFORME
Don't we have QA for this case? This bug *does* exist, it's not that I'm speaking about aliens or so.
Whiteboard: [NEEDINFO] → [NEEDINFO] Need reproduction
Whiteboard: [NEEDINFO] Need reproduction → [NEEDINFO] QA: Need reproduction
This is 100% reproducible for me on Win98 and Linux, and the menu comes up blank on Mac. This may be a corrupted localstore.rdf (I'll check), but wouldn't that still be a defect? reopening.
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
Deleting my localstore.rdf had no effect on Win98 or Linux.
[dogfood-][nsbeta2+]
Keywords: nsbeta2
Whiteboard: [NEEDINFO] QA: Need reproduction → [dogfood-][nsbeta2+]
ok, i've reproduceed this and it *doesn't* occur with really big hand-rolled XUL menus. so it probably is something with RDF templates. accepting.
Status: REOPENED → ASSIGNED
Target Milestone: M16 → M17
Attached a bookmarks.html that *works*. My suspicion is that something evil has happened to trudelle's bookmarks.html file: I also noticed a bunch of assertions during startup when I loaded it.
rjc: this appears to be part of the fix, since nsIFile does something wonderful on each different platform. On Win32 and Linux, you get an error if the file doesn't exist and you ask if it IsDirectory(). So, I fixed it by just ignoring the damn error, hyatt-style. This makes the main bookmarks menu work right; however, I now have a problem with the drop-down in the personal toolbar. Looking into that next.
OK, I'll support Hyatt's style of ignoring errors with a mighty r=rjc
rjc: as we'd discussed some time ago, doing some queries on the nsHTTPIndex data source triggers re-entrant updates. This basically gets layout's knickers in a knot, so I added some guards around OnAssert, et. al. to make sure we ignore any updates that occur while we're actually propogating matches and changing the content model.
p.s. your FTP menus still work, you sex machine.
Sweet.
fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
verified fixed (per email from Ben Bucksch)
Status: RESOLVED → VERIFIED
Component: XP Toolkit/Widgets: Menus → XUL
QA Contact: jrgmorrison → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: