Bug 39699. Ignore errors from nsIFile, hyatt-style! seriously, though: nsIFile returns random error codes per-platform when you ask if a non-existant file is a directory. This was causing the RDF enumeration to abort prematurely for no good reason. r=rjc